--- a/cert-test-examples/Cargo.toml
+++ b/cert-test-examples/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "cert-test-examples"
-version = "0.1.0"
-edition = "2021"
+description = "Examples using x509-test-certs to test TLS connections"
+version.workspace = true
+authors.workspace = true
+repository.workspace = true
 license = "MIT"
+
+edition = "2021"
+publish = false
 
 [dependencies]
 hyper = { version = "0.14.26", features = ["server"] }
