--- a/x509-test-gen/Cargo.toml
+++ b/x509-test-gen/Cargo.toml
@@ -11,4 +11,5 @@ name = "regenerate-crate-certs"
 path = "examples/regenerate_crate_certs.rs"
 
 [dependencies]
-openssl = { version = "0.10.52" }
+asn1 = "0.15.2"
+openssl = "0.10.52"
